--- a/Code/Data Cleaning.qmd
+++ b/Code/Data Cleaning.qmd
@@ -22,25 +22,30 @@ editor: visual
 ---
 
 ```{r}
-if (!require("pacman", quietly = TRUE)) {
-  install.packages("pacman")
-}
+#if (!require("pacman", quietly = TRUE)) {
+#  install.packages("pacman")
+#}
 
-library(pacman)
-pacman::p_load(
-  dplyr,
-  rio,
-  here,
-  stringr,
-  purrr,
-  lubridate,
-  tidyr
-  )
+#library(pacman)
+library(dplyr)
+library(rio)
+library(here)
+library(stringr)
+library(purrr)
+library(lubridate)
+library(tidyr)
+#pacman::p_load(
+#  dplyr,
+#  rio,
+#  here,
+#  stringr,
+#  purrr,
+#  lubridate,
+#  tidyr
+#  )
 ```
 
-
 ## Load the tables of the CDM
-
 
 <!-- Note: Please change the file names (and file location if needed) corresponding to the actual files in the computer -->
 
@@ -68,7 +73,6 @@ outcome_event2 <- rbind(outcome_event, new_thrc)
 export(outcome_event2, here("outcome_event2.csv"))
 outcome_event <- outcome_event2
 ```
-
 
 ## 0. Data cleaning
 
@@ -162,41 +166,53 @@ cdm_cleaned$covid_vacc <- cdm_cleaned$covid_vacc %>%
 ```{r}
 # Function to Convert date columns to date format
 convert_date <- function(df, 
-                         date_pattern = "_date(_\\d+)?$", #"_date" optionally followed by "_" and one or more digits
-                        orders = c("dmy", "ymd")
-                        ) {
-  
-  date_cols <- grep(date_pattern, names(df), value = TRUE) #collect columns whose names containing "_date"
-  
+                         date_pattern = "_date(_\\d+)?$",
+                         orders = c("dmy", "ymd")) {
+
+  date_cols <- grep(date_pattern, names(df), value = TRUE)
+
   for (col in date_cols) {
     x <- df[[col]]
-    
-    if (!is.character(x)) next
-    
-    parsed <- lubridate::parse_date_time(
-      x,
-      orders = orders,
-      exact = FALSE
-    )
 
-    # convert to Date (drop time)
-    parsed <- as.Date(parsed)
-    
-    # Warn if conversion failed for non-missing values
-    failed <- !is.na(x) & is.na(parsed)
-    if (any(failed)) {
-      warning(
-        sprintf(
-          "Date parsing failed in column '%s' for %d rows",
-          col, sum(failed)
-        ),
-        call. = FALSE
+    # case 1: character → parse
+    if (is.character(x)) {
+      parsed <- lubridate::parse_date_time(
+        x,
+        orders = orders,
+        exact = FALSE
       )
+      parsed <- as.Date(parsed)
+
+      failed <- !is.na(x) & is.na(parsed)
+      if (any(failed)) {
+        warning(
+          sprintf(
+            "Date parsing failed in column '%s' for %d rows",
+            col, sum(failed)
+          ),
+          call. = FALSE
+        )
+      }
+
+      df[[col]] <- parsed
+      next
     }
-    df[[col]] <- parsed
+
+    # case 2: IDate/POSIXct / POSIXlt → Date
+    if (inherits(x, c("POSIXct", "POSIXlt", "IDate"))) {
+      df[[col]] <- as.Date(x)
+      next
+    }
+
+    # case 4: already Date → do nothing
+    if (inherits(x, "Date")) {
+      next
+    }
   }
+
   df
 }
+
 
 # Apply the function
 cdm_cleaned <- lapply(cdm_cleaned, function(df){
@@ -540,7 +556,8 @@ cdm_eligible[c("myo", "pe", "thrc")] <- lapply(cdm_eligible[c("myo", "pe", "thrc
 })
 ```
 
-- Keep only individuals with events after applying exclusion criteria
+-   Keep only individuals with events after applying exclusion criteria
+
 ```{r}
 id_final_inclusion <- rbind(cdm_eligible$myo, cdm_eligible$pe, cdm_eligible$thrc) %>%
   distinct(id)
@@ -550,7 +567,6 @@ cdm_eligible <- lapply(cdm_eligible, \(df) {
     dplyr::semi_join(df, id_final_inclusion, by = "id")
 })
 ```
-
 
 #### Number of events per outcome after applying all eligibility criteria (and before censoring):
 
@@ -598,9 +614,11 @@ cdm_eligible$individual <- cdm_eligible$individual %>%
 ```
 
 ```{r}
+# For censoring events other than death, follow-up is censored on the day prior to the event date; for death, follow-up is censored on the date of death
+
 cdm_eligible$individual <- cdm_eligible$individual %>%
   mutate(obs_sta_date = as.Date("2020-10-01"),
-         obs_end_date = pmin(admin_end, death_date, deregister_date, vacc_date_1, vacc_date_3, infect_date, na.rm = TRUE))
+         obs_end_date = pmin(admin_end, death_date, deregister_date -1, vacc_date_1 -1, vacc_date_3 -1, infect_date -1, na.rm = TRUE))
 ```
 
 ### Retain only the outcomes during the observation period of each individual
@@ -612,7 +630,6 @@ cdm_eligible[c("myo", "pe", "thrc")] <- lapply(cdm_eligible[c("myo", "pe", "thrc
     dplyr::filter(diagnosis_date <= obs_end_date)
 })
 ```
-
 
 -   Number of events per outcome after censoring:
 
@@ -647,7 +664,6 @@ cdm_eligible$covid_vacc_wide <- cdm_eligible$covid_vacc %>%
   select(-c(brand, dose, same_brand_primary)) %>%
   tidyr::pivot_wider(names_from = brand_dose, values_from = date)
 ```
-
 
 ```{r}
 # Check if the `individual` table and `vacc` table do not have duplicate ids
@@ -773,10 +789,9 @@ for (df in names(cdm_eligible)) {
 }
 ```
 
+-   Skim the final datasets:
 
-- Skim the final datasets:
 ```{r}
 lapply(cdm_eligible[c("myo_sccs", "pe_sccs", "thrc_sccs", "comorb_stat", "individual")], summary)
 lapply(cdm_eligible[c("myo_sccs","comorb_stat", "individual")], base_summary)
 ```
-
